--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,20 @@
   "short_name": "MyPWA",
   "name": "My Progressive Web App",
   "description": "My PWA created with Create React App",
-  "start_url": "./",
+  "start_url": "/calculator/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "icons": [
     {
-      "src": "logo192.png",
+      "src": "/calculator/logo192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
       "src": "logo512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "/calculator/image/png"
     }
   ]
 }
